# OneMove

./: .env.local.example  .gitattributes  .gitignore  README.md  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
__tests__/: App.test.tsx  backend.test.ts  ml.test.ts
analytics/: README.md  lineage.yml
app/: error.tsx  layout.tsx  loading.tsx  manifest.ts  page.tsx
data/: README.md
deploy/: README.md  env.example  production-readiness-gap.md  rollback-plan.md  smoke-test-checklist.md  vercel-preview-checklist.md
docker/: Dockerfile.python  docker-compose.local.yml
docs/: ADMIN_DETAILS_FIX_REPORT.md  ADVANCED_QA_AUDIT_REPORT.md  BACKEND_QA_REPORT.md  (+75 more)
python/: README.md  pyproject.toml
python/src/onemove_intelligence/: cli.py
python/src/onemove_intelligence.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/src/onemove_intelligence/analytics/: metric_store.py
python/src/onemove_intelligence/data_quality/: checks.py
python/src/onemove_intelligence/evaluation/: __init__.py  model_evaluation.py
python/src/onemove_intelligence/features/: feature_store.py
python/src/onemove_intelligence/integrations/: c_dispatch.py
python/src/onemove_intelligence/ml/: demand_forecast.py  dispatch_optimizer.py
python/tests/: test_c_dispatch_integration.py  test_data_quality.py  test_demand_forecast.py  test_dispatch_optimizer.py  test_feature_store.py  test_model_evaluation.py
python/tests/fixtures/: ml_evaluation_vectors.py
(+490 files in other folders)
