[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "onemove_intelligence"
version = "0.1.0"
description = "Intelligence and Analytics package for OneMove Marketplace"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "pydantic",
    "scikit-learn"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff"
]
